--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - image: circleci/node:10.16
 
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "06:24:54:b5:92:03:40:04:fc:87:82:c0:71:99:c4:6c"
       - checkout
       - run:
           name: Deploying to GitHub Pages
@@ -13,7 +16,7 @@ jobs:
             git config --global user.email "mkolar@users.noreply.github.com"
             git config --global user.name "Website Deployment Script"
             echo "machine github.com login mkolar password $GITHUB_TOKEN" > ~/.netrc
-            cd website && yarn install && GIT_USER=mkolar yarn run publish-gh-pages
+            cd website && yarn install && GIT_USER=mkolar yarn run deploy
 
 workflows:
   build_and_deploy:
